# textractor_websocket

./: .gitignore  404.html  CHANGELOG.html  CHANGELOG.md  Cargo.toml  README.md  flake.nix  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: artifacts.yml  docs.yml
guide/: book.toml  installation.html  usage.html
guide/src/: README.md  SUMMARY.md
guide/src/guide/: installation.md  usage.md
guide/theme/: head.hbs
src/: lib.rs  textractor.rs  websocket.rs
