[package]
name = "textractor_websocket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
widestring = { version = "1.0.2", default-features = false, features = ["std"] }
winapi = { version = "0.3.9", default-features = false, features = ["winnt", "minwindef"] }
ws = { version = "0.9.2", default-features = false }
